--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,83 +1,47 @@
-.browsehappy {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
-}
+.container div.s3.photo img {
+  width: 30%;
+  height: 15em;
+  position: relative;
+  display: inline-block;
+  float: left; }
 
-body {
-  padding: 0;
-}
+nav {
+  padding-left: 5%;
+  padding-right: 5%;
+  background-color: #3D5946; }
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-left: 15px;
-  padding-right: 15px;
-}
+.banner {
+  width: 100%;
+  height: 95vh;
+  background-image: url("/images/exterior-paint-door.jpeg");
+  background-position: center bottom;
+  background-size: cover;
+  background-repeat: no-repeat;
+  text-align: center; }
 
-/* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
-  margin-bottom: 10px;
-}
-/* Make the masthead heading the same height as the navigation */
-.header h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 40px;
-  padding-bottom: 19px;
-}
+.container.bio {
+  text-align: center; }
 
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
-}
+.container {
+  margin-top: 2em; }
+  .container .row .col.s4 {
+    position: relative;
+    text-align: center; }
+    .container .row .col.s4 i {
+      font-size: 4em; }
+    .container .row .col.s4 h1 {
+      font-size: 2em;
+      margin-top: .5em; }
 
-.container-narrow > hr {
-  margin: 30px 0;
-}
+.container.crew .row {
+  display: inline-block; }
 
-/* Main marketing message and sign up button */
-.jumbotron {
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-}
-.jumbotron .btn {
-  font-size: 21px;
-  padding: 14px 24px;
-}
+footer.page-footer {
+  background-color: #3D5946; }
+  footer.page-footer .container .row .col.l4.offset-l2.s12 ul li i {
+    font-size: 2em;
+    display: inline-block; }
+  footer.page-footer .footer-copyright {
+    overflow: visible; }
 
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-}
-.marketing p + h4 {
-  margin-top: 28px;
-}
-
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
-
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
-  }
-}
+/*# sourceMappingURL=main.css.map */
