--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,16 +1,58 @@
+<div class="banner col s12">
 
-      <div class="row">
-        <div class="col s12 m6">
-          <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
-              <span class="card-title">Card Title</span>
-              <p>I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively.</p>
-            </div>
-            <div class="card-action">
-              <a href="#">This is a link</a>
-              <a href="#">This is a link</a>
-            </div>
-          </div>
+</div>
+
+<div class="container bio">
+    <h1>Peace of Mind Painting</h1>
+    <p>Serving the greater Knoxville, Tennessee communities, Peace of Mind Painting is dedicated to delivering a professional, skilled, and valuable experience while bridging the gap between the QUALITY you desire and the VALUE you deserve. We have the knowledge required to successfully navigate each stage of your painting project. Precision residential interior and exterior finishes combined with commercial experience makes Peace of Mind Painting your go-to company for all your painting needs. CALL TODAY TO SCHEDULE A FREE ESTIMATE!</p>
+</div>
+
+<div class="container">
+    <div class="row">
+
+        <div class="col s4">
+            <span><i class="ion-bowtie"></i></span>
+            <h1>Professional</h1>
+            <p>Peace of Mind Painting is a professional painting service. We will set your mind at ease by handling all matters in a professional manner.</p>
         </div>
-      </div>
+        <div class="col s4">
+            <span><i class="ion-briefcase"></i></span>
+            <h1>Skilled</h1>
+            <p>Peace of Mind Painting is a professional painting service. We will set your mind at ease by handling all matters in a professional manner.</p>
+        </div>
+        <div class="col s4">
+            <span><i class="ion-social-usd"></i></span>
+            <h1>Valuable</h1>
+            <p>Peace of Mind Painting is a professional painting service. We will set your mind at ease by handling all matters in a professional manner.</p>
+        </div>
+
+    </div>
+
+</div>
+
+<div class="container crew">
+    <div class="row">
+        <div class="col s6">
+            <div class="card large">
+                <div class="card-image">
+                    <img src="images/scott.jpg">
+                    <span class="card-title">Scott Froelich: Owner & Operator</span>
+                </div>
+                <div class="card-content">
+                    <p>Scott brings to your project over ten years experience in the painting industry. His attention to detail and meticulous practices set him apart in the painting community. Expect clear and timely communication and an eagerness to listen in order to successfully complete your project according to your vision. Scott lives in the Gibbs community of Knoxville, TN with his loving wife and three wonderful children.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col s6">
+            <div class="card large">
+                <div class="card-image">
+                    <img src="images/joe.JPG">
+                    <span class="card-title">Joe Kitson</span>
+                </div>
+                <div class="card-content">
+                    <p>At 28 Joe has already 10+years experience as a painter. In middle school he worked for a painting contractor all the way through college years. With industrial experience and several of his own clientele, Joe has learned through the years that consistent quality and dependability are the keystones of private sector success. </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
