--- a/app/views/work.html
+++ b/app/views/work.html
@@ -1,15 +1,47 @@
-<div class="container">
-    <h1>See our work</h1>
-    <div class="s3 photo">
-        <img src="/images/fence-1.jpg" alt="">
+<!-- Work Page -->
+<div class="work">
+
+    <!-- Indoor Carousel -->
+    <div class="carousel">
+        <a class="carousel-item" href=""><img src="/images/fireplace-2.jpg"></a>
+        <a class="carousel-item" href=""><img src="/images/fireplace-1.jpg"></a>
+        <a class="carousel-item" href=""><img src="/images/interior-1.jpg"></a>
+        <a class="carousel-item" href=""><img src="/images/interior-2.jpg"></a>
+        <a class="carousel-item" href=""><img src="/images/interior-3.jpg"></a>
+        <a class="carousel-item" href=""><img src="/images/interior-4.jpg"></a>
+        <a class="carousel-item" href=""><img src="/images/newconstruction-1.jpg"></a>
+        <a class="carousel-item" href=""><img src="/images/newconstruction-2.jpg"></a>
+        <a class="carousel-item" href=""><img src="/images/remodel-1.jpg"></a>
+        <a class="carousel-item" href=""><img src="/images/remodel-2.jpg"></a>
+        <a class="carousel-item" href=""><img src="/images/remodel-3.jpg"></a>
     </div>
-    <div class="s3 photo">
-        <img src="/images/fence-1.jpg" alt="">
+
+    <!-- Indoor Heading -->
+    <div class="row">
+        <div class="gallery-heading col s12 offset-s0 m8 offset-m2">
+            <h1>Indoor Gallery</h1>
+            <p>Lorem ipsom shit fuck shit fuck shit fuck shit fuck shit fuck shit fuck shit fuck shit fuck shit fuck shit fuck.</p>
+        </div>
     </div>
-    <div class="s3 photo">
-        <img src="/images/fence-1.jpg" alt="">
+
+    <!-- Outdoor Carousel -->
+    <div class="carousel">
+        <a class="carousel-item" href=""><img src="/images/exterior-1.jpg"></a>
+        <a class="carousel-item" href=""><img src="/images/exterior-2.jpg"></a>
+        <a class="carousel-item" href=""><img src="/images/exterior-3.jpg"></a>
+        <a class="carousel-item" href=""><img src="/images/exterior-4.jpg"></a>
+        <a class="carousel-item" href=""><img src="/images/fence-1.jpg"></a>
+        <a class="carousel-item" href=""><img src="/images/fence-2.jpg"></a>
+        <a class="carousel-item" href=""><img src="/images/fence-3.jpg"></a>
+        <a class="carousel-item" href=""><img src="/images/fence-4.jpg"></a>
     </div>
-    <div class="s3 photo">
-        <img src="/images/fence-1.jpg" alt="">
+
+    <!-- Outdoor Heading -->
+    <div class="row">
+        <div class="gallery-heading col s12 offset-s0 m8 offset-m2">
+            <h1>Indoor Gallery</h1>
+            <p>Lorem ipsom shit fuck shit fuck shit fuck shit fuck shit fuck shit fuck shit fuck shit fuck shit fuck shit fuck.</p>
+        </div>
     </div>
+
 </div>
