--- a/app/scss/_work.scss
+++ b/app/scss/_work.scss
@@ -1,10 +1,23 @@
-.container {
-    div.s3.photo {
-
-        img {
-            width: 30%;
-            height: 15em;
-            @include inline;
+// Work Page stylesheet
+.work {
+    text-align: center;
+    padding: 2em 0;
+    .carousel {
+        height: 60vh;
+        .carousel-item {
+        }
+    }
+    .gallery-heading {
+        h1 {
+            font-size: 1.5em;
+            color: $primary;
+            margin: 0;
+        }
+        p {
+            width: 50%;
+            margin: 0 auto;
+            font-size: 1em;
+            color: $secondary;
         }
     }
 }
