Update to carousel

--- a/app/views/work.html
+++ b/app/views/work.html
@@ -3,17 +3,17 @@
 
     <!-- Indoor Carousel -->
     <div class="carousel">
-        <a class="carousel-item" href=""><img src="/images/fireplace-2.jpg"></a>
-        <a class="carousel-item" href=""><img src="/images/fireplace-1.jpg"></a>
-        <a class="carousel-item" href=""><img src="/images/interior-1.jpg"></a>
-        <a class="carousel-item" href=""><img src="/images/interior-2.jpg"></a>
-        <a class="carousel-item" href=""><img src="/images/interior-3.jpg"></a>
-        <a class="carousel-item" href=""><img src="/images/interior-4.jpg"></a>
-        <a class="carousel-item" href=""><img src="/images/newconstruction-1.jpg"></a>
-        <a class="carousel-item" href=""><img src="/images/newconstruction-2.jpg"></a>
-        <a class="carousel-item" href=""><img src="/images/remodel-1.jpg"></a>
-        <a class="carousel-item" href=""><img src="/images/remodel-2.jpg"></a>
-        <a class="carousel-item" href=""><img src="/images/remodel-3.jpg"></a>
+        <a class="carousel-item" href=""><img class="materialboxed" src="/images/fireplace-2.jpg"></a>
+        <a class="carousel-item" href=""><img class="materialboxed" src="/images/fireplace-1.jpg"></a>
+        <a class="carousel-item" href=""><img class="materialboxed" src="/images/interior-1.jpg"></a>
+        <a class="carousel-item" href=""><img class="materialboxed" src="/images/interior-2.jpg"></a>
+        <a class="carousel-item" href=""><img class="materialboxed" src="/images/interior-3.jpg"></a>
+        <a class="carousel-item" href=""><img class="materialboxed" src="/images/interior-4.jpg"></a>
+        <a class="carousel-item" href=""><img class="materialboxed" src="/images/newconstruction-1.jpg"></a>
+        <a class="carousel-item" href=""><img class="materialboxed" src="/images/newconstruction-2.jpg"></a>
+        <a class="carousel-item" href=""><img class="materialboxed" src="/images/remodel-1.jpg"></a>
+        <a class="carousel-item" href=""><img class="materialboxed" src="/images/remodel-2.jpg"></a>
+        <a class="carousel-item" href=""><img class="materialboxed" src="/images/remodel-3.jpg"></a>
     </div>
 
     <!-- Indoor Heading -->
