testimonials page update

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,6 +1,7 @@
 @import "mixins";
 @import "variables";
 @import "work";
+@import "testimonials";
 nav {
     padding-left: 5%;
     padding-right: 5%;
