--- a/app/views/testimonials.html
+++ b/app/views/testimonials.html
@@ -1,1 +1,18 @@
-<p>This is the testimonials view.</p>
+<div class="testimonials">
+    <div class="container">
+        <div class="card large">
+            <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="images/interior-2.jpg">
+            </div>
+            <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4">Interior Work Review<i class="material-icons right">more_vert</i></span>
+                <p><a href="https://www.facebook.com/PeaceofMindPaint/">See more reviews on our facebook page</a></p>
+            </div>
+            <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4">Codey and Tamara Marcantel<i class="material-icons right">close</i></span>
+                <p>Peace Of Mind Painting is a first-rate business and their work is top-quality. I'm a bit of a perfectionist and have a touch of OCD (my wife would say a little more, Ha!). I've always found it difficult to find good painters, I never felt fully pleased with their work. Scott with Peace Of Mind Painting took my expectations and exceeded them! He pays attention to detail like no other painters have. He is reliable and considerate. I never had to call and ask when he was going to show, and he understood when something came up and needed to work around my family's schedule. After the job, I did not have to go back and pick out all of those unsightly errors that most painting crews disregard. If you're tired (like I was) of firing painters for shoddy work, and having to live with unsightly painting errors, I definitely recommend you call Scott with Peace Of Mind Painting. You'll be glad you did!
+Thank you Scott!</p>
+            </div>
+        </div>
+    </div>
+</div>
