--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -13,6 +13,15 @@
     font-size: 1em;
     color: #A6A5A1; }
 
+.testimonials .container .card.large .card-image.waves-effect.waves-block.waves-light .img {
+  position: relative;
+  float: left;
+  width: 100px;
+  height: 100px;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover; }
+
 nav {
   padding-left: 5%;
   padding-right: 5%;
