--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,37 +1,31 @@
-<!--
-<div class="banner col s12">
-
-</div>
--->
-
-  <div class="slider">
+ <div class="slider">
     <ul class="slides">
       <li>
-        <img src="http://lorempixel.com/580/250/nature/1"> <!-- random image -->
+        <img src="/images/pomp.jpeg"> <!-- random image -->
         <div class="caption center-align">
-          <h3>This is our big Tagline!</h3>
-          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+          <h3>Peace of Mind Painting</h3>
+          <h5 class="light grey-text text-lighten-3">Bringing peace of mind to your next home improvement project</h5>
         </div>
       </li>
       <li>
-        <img src="http://lorempixel.com/580/250/nature/2"> <!-- random image -->
+        <img src="/images/exterior-paint-door.jpeg"> <!-- random image -->
         <div class="caption left-align">
-          <h3>Left Aligned Caption</h3>
+          <h3>Exterior</h3>
           <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
         </div>
       </li>
       <li>
-        <img src="http://lorempixel.com/580/250/nature/3"> <!-- random image -->
+        <img src="/images/interior.jpeg"> <!-- random image -->
         <div class="caption right-align">
-          <h3>Right Aligned Caption</h3>
+          <h3>Interior</h3>
           <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
         </div>
       </li>
       <li>
-        <img src="http://lorempixel.com/580/250/nature/4"> <!-- random image -->
+        <img src="/images/more.jpeg"> <!-- random image -->
         <div class="caption center-align">
-          <h3>This is our big Tagline!</h3>
-          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+          <h3>And so much more!</h3>
+          <h5 class="light grey-text text-lighten-3">Whatever you're looking to spruce up, we can help!</h5>
         </div>
       </li>
     </ul>
