--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -8,18 +8,22 @@ nav {
     background-color: $primary;
 }
 
-.banner {
-    width: 100%;
-    height: 95vh;
-    background-image: url('/images/exterior-paint-door.jpeg');
-    background-position: center bottom;
-    background-size: cover;
-    background-repeat: no-repeat;
-    text-align: center;
+.slider {
+    .indicators {
+        .indicator-item.active {
+            background-color: $accent2;
+        }
+    }
 }
 
 .container.bio {
-   text-align: center;
+    text-align: center;
+    h1 {
+        color: $primary;
+    }
+    p {
+        color: $secondary;
+    }
 }
 
 .container {
@@ -30,36 +34,43 @@ nav {
             text-align: center;
             i {
                 font-size: 4em;
+                color: $accent2;
             }
             h1 {
                 font-size: 2em;
                 margin-top: .5em;
+                color: $primary;
             }
-            p {}
+            p {
+                color: $secondary;
+            }
         }
     }
 }
 
 .container.crew {
-    .row {
-        display: inline-block;
+    .card {
+        .card-content {}
     }
 }
 
 footer.page-footer {
     background-color: $primary;
+    .prefix {
+        color: white;
+    }
+
+    .submit {
+        background-color: $primary;
+        border: 1px solid white;
+        color: white;
+        width: 50%;
+        @include h-center;
+    }
     .container {
-        .row {
-            .col.l4.offset-l2.s12 {
-                ul {
-                    li {
-                        i {
-                            font-size: 2em;
-                            display: inline-block;
-                        }
-                    }
-                }
-            }
+        i {
+            font-size: 2em;
+            display: inline-block;
         }
     }
     .footer-copyright {
