--- a/app/views/services.html
+++ b/app/views/services.html
@@ -1,1 +1,22 @@
-<p>This is the services view.</p>
+<div class="services">
+    <div class="container">
+       <div class="row">
+           <div class="col s6">
+                <img src="images/paint-roller.svg" alt="">
+           </div>
+           <div class="col s6">
+               <h3>We're really good at painting...</h3>
+               <h5>but we can also help with the following:</h5>
+               <ul>
+                   <li>Wallpaper Removal</li>
+                   <li>Remodels</li>
+                   <li>Fence Refinishing</li>
+                   <li>New Construction</li>
+                   <li>Interior</li>
+                   <li>Exterior</li>
+                   <li>Sheetrock Repair</li>
+               </ul>
+           </div>
+       </div>
+    </div>
+</div>
