--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -13,14 +13,21 @@
     font-size: 1em;
     color: #A6A5A1; }
 
-.testimonials .container .card.large .card-image.waves-effect.waves-block.waves-light .img {
-  position: relative;
-  float: left;
-  width: 100px;
-  height: 100px;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-size: cover; }
+.testimonials .container .row .col.s6 img {
+  height: 20%;
+  width: 100%;
+  border: 3px solid #67809F; }
+.testimonials .container .row .col.s6 h4 {
+  color: #3D5946; }
+
+.services .container .row .col.s6 h3 {
+  color: #3D5946; }
+.services .container .row .col.s6 h5 {
+  color: #A6A5A1; }
+.services .container .row .col.s6 li {
+  color: #67809F;
+  font-size: 1.25em;
+  padding: .5em; }
 
 nav {
   padding-left: 5%;
@@ -31,14 +38,16 @@ nav {
   background-color: #67809F; }
 
 .container.bio {
-  text-align: center; }
+  text-align: center;
+  padding: 2em 0; }
   .container.bio h1 {
     color: #3D5946; }
   .container.bio p {
     color: #A6A5A1; }
 
 .container {
-  margin-top: 2em; }
+  margin-top: 2em;
+  padding: 2em 0; }
   .container .row .col.s4 {
     position: relative;
     text-align: center; }
@@ -56,6 +65,10 @@ footer.page-footer {
   background-color: #3D5946; }
   footer.page-footer .prefix {
     color: white; }
+  footer.page-footer .prefix.active {
+    color: #67809F; }
+  footer.page-footer .input {
+    border-bottom: 1px solid white; }
   footer.page-footer .submit {
     background-color: #3D5946;
     border: 1px solid white;
