--- a/app/views/main.html
+++ b/app/views/main.html
@@ -75,7 +75,7 @@
         <div class="col s6">
             <div class="card large">
                 <div class="card-image">
-                    <img src="images/joe.JPG">
+                    <img src="images/joe.jpg">
                     <span class="card-title">Joe Kitson</span>
                 </div>
                 <div class="card-content">
