--- a/app/views/work.html
+++ b/app/views/work.html
@@ -20,7 +20,7 @@
     <div class="row">
         <div class="gallery-heading col s12 offset-s0 m8 offset-m2">
             <h1>Indoor Gallery</h1>
-            <p>Lorem ipsom shit fuck shit fuck shit fuck shit fuck shit fuck shit fuck shit fuck shit fuck shit fuck shit fuck.</p>
+            <p>Lorem ipsom dolor etc etc etc.</p>
         </div>
     </div>
 
@@ -40,7 +40,7 @@
     <div class="row">
         <div class="gallery-heading col s12 offset-s0 m8 offset-m2">
             <h1>Indoor Gallery</h1>
-            <p>Lorem ipsom shit fuck shit fuck shit fuck shit fuck shit fuck shit fuck shit fuck shit fuck shit fuck shit fuck.</p>
+            <p>Lorem ipsom dolor etc etc etc.</p>
         </div>
     </div>
 
