--- a/app/views/work.html
+++ b/app/views/work.html
@@ -1,47 +1,87 @@
 <!-- Work Page -->
-<div class="work">
+<div class="work container">
 
-    <!-- Indoor Carousel -->
-    <div class="carousel">
-        <a class="carousel-item" href=""><img class="materialboxed" src="/images/fireplace-2.jpg"></a>
-        <a class="carousel-item" href=""><img class="materialboxed" src="/images/fireplace-1.jpg"></a>
-        <a class="carousel-item" href=""><img class="materialboxed" src="/images/interior-1.jpg"></a>
-        <a class="carousel-item" href=""><img class="materialboxed" src="/images/interior-2.jpg"></a>
-        <a class="carousel-item" href=""><img class="materialboxed" src="/images/interior-3.jpg"></a>
-        <a class="carousel-item" href=""><img class="materialboxed" src="/images/interior-4.jpg"></a>
-        <a class="carousel-item" href=""><img class="materialboxed" src="/images/newconstruction-1.jpg"></a>
-        <a class="carousel-item" href=""><img class="materialboxed" src="/images/newconstruction-2.jpg"></a>
-        <a class="carousel-item" href=""><img class="materialboxed" src="/images/remodel-1.jpg"></a>
-        <a class="carousel-item" href=""><img class="materialboxed" src="/images/remodel-2.jpg"></a>
-        <a class="carousel-item" href=""><img class="materialboxed" src="/images/remodel-3.jpg"></a>
-    </div>
+    <!--------------- Indoor Collage --------------->
 
-    <!-- Indoor Heading -->
+    <h2>Indoor Gallery</h2>
+    <!-- Tall -->
     <div class="row">
-        <div class="gallery-heading col s12 offset-s0 m8 offset-m2">
-            <h1>Indoor Gallery</h1>
-            <p>Lorem ipsom dolor etc etc etc.</p>
-        </div>
+        <div class="col s12 m6 tall" id="interior-1"></div>
+        <div class="col s12 m6 tall" id="interior-2"></div>
     </div>
 
-    <!-- Outdoor Carousel -->
-    <div class="carousel">
-        <a class="carousel-item" href=""><img src="/images/exterior-1.jpg"></a>
-        <a class="carousel-item" href=""><img src="/images/exterior-2.jpg"></a>
-        <a class="carousel-item" href=""><img src="/images/exterior-3.jpg"></a>
-        <a class="carousel-item" href=""><img src="/images/exterior-4.jpg"></a>
-        <a class="carousel-item" href=""><img src="/images/fence-1.jpg"></a>
-        <a class="carousel-item" href=""><img src="/images/fence-2.jpg"></a>
-        <a class="carousel-item" href=""><img src="/images/fence-3.jpg"></a>
-        <a class="carousel-item" href=""><img src="/images/fence-4.jpg"></a>
-    </div>
-
-    <!-- Outdoor Heading -->
+    <!-- Split Short -->
     <div class="row">
-        <div class="gallery-heading col s12 offset-s0 m8 offset-m2">
-            <h1>Indoor Gallery</h1>
-            <p>Lorem ipsom dolor etc etc etc.</p>
-        </div>
+        <div class="col s12 m6 short" id="remodel-1"></div>
+        <div class="col s12 m6 short" id="remodel-2"></div>
     </div>
+
+    <!-- Wide -->
+    <div class="row">
+        <div class="col s12 wide" id="newconstruction-1"></div>
+    </div>
+
+    <!-- Wide -->
+    <div class="row">
+        <div class="col s12 wide" id="newconstruction-2"></div>
+    </div>
+
+    <!-- Split Short -->
+    <div class="row">
+        <div class="col s12 m6 short" id="fireplace-1"></div>
+        <div class="col s12 m6 short" id="fireplace-2"></div>
+    </div>
+
+    <!-- Tall -->
+    <div class="row">
+        <div class="col s12 m6 tall" id="interior-3"></div>
+        <div class="col s12 m6 tall" id="interior-4"></div>
+    </div>
+
+
+
+    <!--------------- Outdoor Collage --------------->
+
+    <h2 class="outdoor">Outdoor Gallery</h2>
+    <!-- Tall -->
+    <div class="row">
+        <div class="col s12 m6 tall" id="exterior-1"></div>
+        <div class="col s12 m6 tall" id="exterior-3"></div>
+    </div>
+
+<!--     Split Short -->
+    <div class="row">
+        <div class="col s12 m6 short" id="fence-1"></div>
+        <div class="col s12 m6 short" id="fence-2"></div>
+    </div>
+
+    <!-- Wide -->
+    <div class="row">
+        <div class="col s12 wide" id="exterior-2"></div>
+    </div>
+
+    <!-- Wide -->
+    <div class="row">
+        <div class="col s12 wide" id="exterior-4"></div>
+    </div>
+
+    <!-- Split Short -->
+    <div class="row">
+        <div class="col s12 m6 short" id="fence-3"></div>
+        <div class="col s12 m6 short" id="fence-4"></div>
+    </div>
+
+    <!-- Tall -->
+<!--
+    <div class="row">
+        <div class="col s12 m6 tall" id="interior-3"></div>
+        <div class="col s12 m6 tall" id="interior-4"></div>
+    </div>
+-->
+
+
+
+
+
 
 </div>
