--- a/app/scss/_testimonials.scss
+++ b/app/scss/_testimonials.scss
@@ -10,6 +10,9 @@
                 h4 {
                     color: $primary;
                 }
+                p {
+                    color: $secondary;
+                }
             }
         }
     }
