--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,39 +1,45 @@
- <div class="slider">
+<div class="slider">
     <ul class="slides">
-      <li>
-        <img src="/images/pomp.jpeg"> <!-- random image -->
-        <div class="caption center-align">
-          <h3>Peace of Mind Painting</h3>
-          <h5 class="light grey-text text-lighten-3">Bringing peace of mind to your next home improvement project</h5>
-        </div>
-      </li>
-      <li>
-        <img src="/images/exterior-paint-door.jpeg"> <!-- random image -->
-        <div class="caption left-align">
-          <h3>Exterior</h3>
-          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-        </div>
-      </li>
-      <li>
-        <img src="/images/interior.jpeg"> <!-- random image -->
-        <div class="caption right-align">
-          <h3>Interior</h3>
-          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-        </div>
-      </li>
-      <li>
-        <img src="/images/more.jpeg"> <!-- random image -->
-        <div class="caption center-align">
-          <h3>And so much more!</h3>
-          <h5 class="light grey-text text-lighten-3">Whatever you're looking to spruce up, we can help!</h5>
-        </div>
-      </li>
+        <li>
+            <img src="/images/pomp.jpeg">
+            <!-- random image -->
+            <div class="caption center-align">
+                <h3>Peace of Mind Painting</h3>
+                <h5 class="light grey-text text-lighten-3">Bringing peace of mind to your next home improvement project</h5>
+            </div>
+        </li>
+
+        <li>
+            <img src="/images/interior.jpeg">
+            <!-- random image -->
+            <div class="caption right-align">
+                <h3>Interior</h3>
+                <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+            </div>
+        </li>
+        <li>
+            <img src="/images/exterior-paint-door.jpeg">
+            <!-- random image -->
+            <div class="caption left-align">
+                <h3>Exterior</h3>
+                <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+            </div>
+        </li>
+        <li>
+            <img src="/images/more.jpeg">
+            <!-- random image -->
+            <div class="caption center-align">
+                <h3>And so much more!</h3>
+                <h5 class="light grey-text text-lighten-3">Whatever you're looking to spruce up, we can help!</h5>
+            </div>
+        </li>
     </ul>
-  </div>
+</div>
 
 <div class="container bio">
     <h1>Peace of Mind Painting</h1>
-    <p>Serving the greater Knoxville, Tennessee communities, Peace of Mind Painting is dedicated to delivering a professional, skilled, and valuable experience while bridging the gap between the QUALITY you desire and the VALUE you deserve. We have the knowledge required to successfully navigate each stage of your painting project. Precision residential interior and exterior finishes combined with commercial experience makes Peace of Mind Painting your go-to company for all your painting needs. CALL TODAY TO SCHEDULE A FREE ESTIMATE!</p>
+    <p>Serving the greater Knoxville, Tennessee communities, Peace of Mind Painting is dedicated to delivering a professional, skilled, and valuable experience while bridging the gap between the QUALITY you desire and the VALUE you deserve. We have the knowledge required to successfully navigate each stage of your painting project. Precision residential interior and exterior finishes combined with commercial experience makes Peace of Mind Painting your go-to company for all your painting needs.
+    <br> <p class="call">CALL TODAY TO SCHEDULE A FREE ESTIMATE!</p></p>
 </div>
 
 <div class="container">
@@ -61,7 +67,7 @@
 
 <div class="container crew">
     <div class="row">
-        <div class="col s6">
+        <div class="col s12 m6">
             <div class="card large">
                 <div class="card-image">
                     <img src="images/scott.jpg">
@@ -72,7 +78,7 @@
                 </div>
             </div>
         </div>
-        <div class="col s6">
+        <div class="col s12 m6">
             <div class="card large">
                 <div class="card-image">
                     <img src="images/joe.jpg">
