--- a/app/views/main.html
+++ b/app/views/main.html
@@ -45,17 +45,17 @@
 <div class="container">
     <div class="row">
 
-        <div class="col s4">
+        <div class="col s12 m4 skill">
             <span><i class="ion-bowtie"></i></span>
             <h1>Professional</h1>
             <p>Peace of Mind Painting is a professional painting service. We will set your mind at ease by handling all matters in a professional manner.</p>
         </div>
-        <div class="col s4">
+        <div class="col s12 m4 skill">
             <span><i class="ion-briefcase"></i></span>
             <h1>Skilled</h1>
             <p>Peace of Mind Painting is a professional painting service. We will set your mind at ease by handling all matters in a professional manner.</p>
         </div>
-        <div class="col s4">
+        <div class="col s12 m4 skill">
             <span><i class="ion-social-usd"></i></span>
             <h1>Valuable</h1>
             <p>Peace of Mind Painting is a professional painting service. We will set your mind at ease by handling all matters in a professional manner.</p>
@@ -67,7 +67,7 @@
 
 <div class="container crew">
     <div class="row">
-        <div class="col s12 m6">
+        <div class="col s12 l6">
             <div class="card large">
                 <div class="card-image">
                     <img src="images/scott.jpg">
@@ -78,7 +78,7 @@
                 </div>
             </div>
         </div>
-        <div class="col s12 m6">
+        <div class="col s12 l6">
             <div class="card large">
                 <div class="card-image">
                     <img src="images/joe.jpg">
