--- a/app/views/services.html
+++ b/app/views/services.html
@@ -1,10 +1,13 @@
 <div class="services">
     <div class="container">
        <div class="row">
-           <div class="col s6">
-                <img src="images/paint-roller.svg" alt="">
+<!--
+           <div class="col m12 l6 roller-container">
+
+                <div class="roller" ng-include="'images/paint-roller.svg'"></div>
            </div>
-           <div class="col s6">
+-->
+           <div class="col s12 info">
                <h3>We're really good at painting...</h3>
                <h5>but we can also help with the following:</h5>
                <ul>
