--- a/app/scss/_testimonials.scss
+++ b/app/scss/_testimonials.scss
@@ -1,18 +1,25 @@
 .testimonials {
     .container {
-        .row {
-            .col.s6 {
-                img {
-                    height: 20%;
-                    width: 100%;
-                    border: 3px solid $accent2;
-                }
-                h4 {
-                    color: $primary;
-                }
-                p {
-                    color: $secondary;
-                }
+        margin-top: 0;
+        padding-top: 0;
+    }
+    .praise {
+        margin-top: 4em;
+        .image {
+            img {
+                height: 20%;
+                width: 100%;
+                border: 3px solid $accent2;
+                margin-bottom: 1em;
+            }
+        }
+        .detail {
+            h4 {
+                margin-top: 0;
+                color: $primary;
+            }
+            p {
+                color: $secondary;
             }
         }
     }
