--- a/app/views/testimonials.html
+++ b/app/views/testimonials.html
@@ -1,23 +1,22 @@
 <div class="testimonials">
     <div class="container">
-        <div class="row">
-            <div class="col s6">
-               <img src="images/interior-2.jpg" alt="">
+        <div class="row praise">
+            <div class="col s12 m6 image">
+                <img src="images/interior-2.jpg" alt="">
             </div>
-            <div class="col s6">
+            <div class="col s12 m6 detail">
                 <h4>Codey and Tamara Marcantel</h4>
-                <p>Peace Of Mind Painting is a first-rate business and their work is top-quality. I'm a bit of a perfectionist and have a touch of OCD (my wife would say a little more, Ha!). I've always found it difficult to find good painters, I never felt fully pleased with their work. Scott with Peace Of Mind Painting took my expectations and exceeded them! He pays attention to detail like no other painters have. He is reliable and considerate. I never had to call and ask when he was going to show, and he understood when something came up and needed to work around my family's schedule. After the job, I did not have to go back and pick out all of those unsightly errors that most painting crews disregard. If you're tired (like I was) of firing painters for shoddy work, and having to live with unsightly painting errors, I definitely recommend you call Scott with Peace Of Mind Painting. You'll be glad you did!
-Thank you Scott!</p>
+                <p>Peace Of Mind Painting is a first-rate business and their work is top-quality. I'm a bit of a perfectionist and have a touch of OCD (my wife would say a little more, Ha!). I've always found it difficult to find good painters, I never felt fully pleased with their work. Scott with Peace Of Mind Painting took my expectations and exceeded them! He pays attention to detail like no other painters have. He is reliable and considerate. I never had to call and ask when he was going to show, and he understood when something came up and needed to work around my family's schedule. After the job, I did not have to go back and pick out all of those unsightly errors that most painting crews disregard. If you're tired (like I was) of firing painters for shoddy work, and having to live with unsightly painting errors, I definitely recommend you call Scott with Peace Of Mind Painting. You'll be glad you did! Thank you Scott!</p>
             </div>
         </div>
 
 
 
-              <div class="row">
-            <div class="col s6">
-               <img src="images/newconstruction-2.jpg" alt="">
+        <div class="row praise">
+            <div class="col s12 m6 image">
+                <img src="images/newconstruction-2.jpg" alt="">
             </div>
-            <div class="col s6">
+            <div class="col s12 m6 detail">
                 <h4>Heather McPherson Story</h4>
                 <p>Full disclosure ... I'm a perfectionist. At least I thought I was until Scott painted my sun room! He found flaws I didn't see and made sure the finished job was as flawless as it could possibly be. He's polite, professional, responsive and extremely neat and tidy in his work. No paint splatters let for me to attend to, no overrun onto floors or windows. He was great about letting me know when he would be here and met every commitment. In short ... I'll never paint another room myself again! Did I mention honest to the core? I'd hire him again in a skinny minute!</p>
             </div>
@@ -25,11 +24,11 @@ Thank you Scott!</p>
 
 
 
-            <div class="row">
-            <div class="col s6">
-               <img src="images/deck-testimony.jpg" alt="">
+        <div class="row praise">
+            <div class="col s12 m6 image">
+                <img src="images/deck-testimony.jpg" alt="">
             </div>
-            <div class="col s6">
+            <div class="col s12 m6 detail">
                 <h4>Mike and Kathy Samples</h4>
                 <p>Couldn't have been more pleased with Peace of Mind Painting and the work they did for us. We have used them multiple times, for both outdoor and indoor painting needs and couldn't be more happy. The owner was helpful in recommending products, and we never once had a concern leaving them alone in our home. We highly recommend them.</p>
             </div>
