--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,6 +1,9 @@
+
 <div class="slider">
     <ul class="slides">
+
         <li>
+<!--           <div class="overlay"></div>-->
             <img src="/images/pomp.jpeg">
             <!-- random image -->
             <div class="caption center-align">
@@ -39,7 +42,9 @@
 <div class="container bio">
     <h1>Peace of Mind Painting</h1>
     <p>Serving the greater Knoxville, Tennessee communities, Peace of Mind Painting is dedicated to delivering a professional, skilled, and valuable experience while bridging the gap between the QUALITY you desire and the VALUE you deserve. We have the knowledge required to successfully navigate each stage of your painting project. Precision residential interior and exterior finishes combined with commercial experience makes Peace of Mind Painting your go-to company for all your painting needs.
-    <br> <p class="call">CALL TODAY TO SCHEDULE A FREE ESTIMATE!</p></p>
+        <br>
+        <p class="call">CALL TODAY TO SCHEDULE A FREE ESTIMATE!</p>
+    </p>
 </div>
 
 <div class="container">
