--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -9,10 +9,24 @@ nav {
     background-color: $primary;
 }
 
+.overlay {
+    background-color: rgba(0, 0, 0, .5);
+    position: absolute;
+    width: 100%;
+    height: 60vh;
+    z-index: 998;
+}
+
 .slider {
     height: 70vh !important;
     .slides {
         height: 60vh !important;
+        h3 {
+            z-index: 999 !important;
+        }
+        h5 {
+            z-index: 999 !important;
+        }
     }
     .indicators {
         .indicator-item.active {
